# VoltChain

./: .gitignore  BUGFIX_TRANSACTION_ERROR.md  COMO_CONFIGURAR_SUPABASE.md  CONFIGURACAO_SUPABASE.md  CORRECAO_API_FINAL.md  CORRECAO_COMPLETA_EXECUTIVA.md  CORRECAO_COMPLETA_FINAL.md  CORRECAO_NONCE_UNICIDADE.md  CORRECAO_TRANSACAO_FRONTEND.md  DEVNET.md  ENV_SETUP.md  FINAL_TRANSACTION_FIX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.md  README_BUGFIX.md  README_FINAL_COMPLETO.md  RESUMO_FINAL_CORRECOES.md  SEGURANCA_E_FUNCIONALIDADE.md  SISTEMA_COMPLETO_RODANDO.md  SISTEMA_PRONTO_FINAL.md  SISTEMA_TESTADO.md  TEST_REPORT.md  TRANSACTIONS_README.md  TRANSACTION_FIX_COMPLETE.md  config.example.env  package.json  setup-devnet.sh  stop-devnet.sh  test-system.sh  workspace.json
backend/: .env.example  README.md  TEST_REPORT.md  jest.config.js  jestSetup.ts  package.json  test.env
dashboard/: ANCHOR_INTEGRATION.md  ENERGY_PRODUCTION.md  IOT_DEVICES.md  PHANTOM_INTEGRATION.md  README.md  SALES_PRICING.md  TOPBAR_FEATURES.md  WALLET_EARNINGS.md  WALLET_INTEGRATION.md  WALLET_INTEGRATION_FINAL.md  next.config.js  package.json
docs/: README.md  (+3 more)
onchain/programs/voltchain/: Cargo.toml
onchain/programs/voltchain/src/: errors.rs  lib.rs
onchain/programs/voltchain/src/instructions/: burn_and_mark.rs  energy_report.rs  finalize_sale.rs  initialize_pool.rs  mod.rs  record_sale.rs
onchain/programs/voltchain/src/states/: mod.rs  pool.rs  sale.rs  user_claim.rs
(+105 files in other folders)
