[package]
name = "voltchain"
version = "0.1.0"
description = "VoltChain Energy Token Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voltchain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"